@@ -1,0 +1,35 @@
+# Generated by git-ship. See 'git-ship --man' for help or https://github.com/jhthorsen/app-git-ship
+use ExtUtils::MakeMaker;
+my %WriteMakefileArgs = (
+  NAME           => 'Mojo::Payment',
+  AUTHOR         => 'Jan Henning Thorsen <jhthorsen@cpan.org>',
+  LICENSE        => 'artistic_2',
+  ABSTRACT_FROM  => 'lib/Mojo/Payment.pm',
+  VERSION_FROM   => 'lib/Mojo/Payment.pm',
+  EXE_FILES      => [qw()],
+  BUILD_REQUIRES => {},
+  TEST_REQUIRES  => {'Test::More' => '0.88'},
+  PREREQ_PM =>
+    {'JSON::Patch' => '0.04', 'Mojo::UserAgent::Role::Cache' => '0.02', 'Mojolicious' => '8.00'},
+  META_MERGE => {
+    'dynamic_config' => 0,
+    'meta-spec'      => {version => 2},
+    'resources'      => {
+      bugtracker => {web => 'https://github.com/jhthorsen/mojo-payment/issues'},
+      homepage   => 'https://github.com/jhthorsen/mojo-payment',
+      repository => {
+        type => 'git',
+        url  => 'https://github.com/jhthorsen/mojo-payment.git',
+        web  => 'https://github.com/jhthorsen/mojo-payment',
+      },
+    },
+  },
+  test => {TESTS => (-e 'META.yml' ? 't/*.t' : 't/*.t xt/*.t')},
+);
+
+unless (eval { ExtUtils::MakeMaker->VERSION('6.63_03') }) {
+  my $test_requires = delete $WriteMakefileArgs{TEST_REQUIRES};
+  @{$WriteMakefileArgs{PREREQ_PM}}{keys %$test_requires} = values %$test_requires;
+}
+
+WriteMakefile(%WriteMakefileArgs);
