@@ -1,5 +1,5 @@
 # You can install this project with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/mojo-payment/archive/master.tar.gz
-requires "JSON::Patch"                  => "0.82";
+requires "JSON::Patch"                  => "0.04";
 requires "Mojo::UserAgent::Role::Cache" => "0.02";
 requires "Mojolicious"                  => "8.00";
 
